--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,12 @@
 !fresh-install.sh
 
 !.config
+
 !.config/nvim
 !.config/nvim/**
+
+!.config/skhd
+!.config/skhd/**
+
+!.config/yabai
+!.config/yabai/**
