--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,18 @@
 [submodule ".config/tmux/plugins/tpm"]
 	path = .config/tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
+[submodule ".config/zsh/plugins/repositories/zsh-autocomplete"]
+	path = .config/zsh/plugins/repositories/zsh-autocomplete
+	url = https://github.com/marlonrichert/zsh-autocomplete.git
+[submodule ".config/zsh/plugins/repositories/zsh-syntax-highlighting"]
+	path = .config/zsh/plugins/repositories/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule ".config/zsh/plugins/repositories/zsh-syntax-highlighting-catppuccin"]
+	path = .config/zsh/plugins/repositories/zsh-syntax-highlighting-catppuccin
+	url = https://github.com/catppuccin/zsh-syntax-highlighting.git
+[submodule ".config/zsh/plugins/repositories/zsh-autosuggestions"]
+	path = .config/zsh/plugins/repositories/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions
+[submodule ".config/zsh/plugins/repositories/spaceship-prompt"]
+	path = .config/zsh/plugins/repositories/spaceship-prompt
+	url = https://github.com/spaceship-prompt/spaceship-prompt.git
