--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,12 @@
 *
 !.gitignore
 !.zshrc
-!.p10k.zsh
-!.alias_config
-!.LESS_TERMCAP
-!.zshenv
 !.gitmodules
 !Brewfile
 !Readme.md
 !fresh-install.sh
 
-!.config
-!.config/**
+!.config/.gitignore
 
 !.bookmarks
 !.bookmarks/**
