--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -7,7 +7,7 @@ blur = false
 
 [font]
 size = 18
-normal = { family = "Hack Nerd Font Propo", style = "Regular"}
-bold = { family = "Hack Nerd Font Propo", style = "Bold"}
-italic = { family = "Hack Nerd Font Propo", style = "Italic"}
-bold_italic = { family = "Hack Nerd Font Propo", style = "Bold Italic"}
+normal = { family = "JetBrainsMonoNL Nerd Font", style = "Regular"}
+bold = { family = "JetBrainsMonoNL Nerd Font", style = "Bold"}
+italic = { family = "JetBrainsMonoNL Nerd Font", style = "Italic"}
+bold_italic = { family = "JetBrainsMonoNL Nerd Font", style = "Bold Italic"}
