--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -2,12 +2,19 @@
 dimensions = { columns = 120, lines = 30 }
 padding = { x = 20, y = 40 }
 decorations = "transparent"
-opacity = 0.8
-blur = false
+opacity = 0.1
+blur = true
+option_as_alt = "Both"
 
 [font]
 size = 18
-normal = { family = "JetBrainsMonoNL Nerd Font", style = "Regular"}
-bold = { family = "JetBrainsMonoNL Nerd Font", style = "Bold"}
-italic = { family = "JetBrainsMonoNL Nerd Font", style = "Italic"}
-bold_italic = { family = "JetBrainsMonoNL Nerd Font", style = "Bold Italic"}
+normal = { family = "JetBrainsMonoNL Nerd Font", style = "Regular" }
+bold = { family = "JetBrainsMonoNL Nerd Font", style = "Bold" }
+italic = { family = "JetBrainsMonoNL Nerd Font", style = "Italic" }
+bold_italic = { family = "JetBrainsMonoNL Nerd Font", style = "Bold Italic" }
+
+[keyboard]
+bindings = [
+    { key = "Right", mods = "Alt", chars = "\u001BF" },
+    { key = "Left",  mods = "Alt", chars = "\u001BB" },
+]
