--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,3 +24,5 @@ set-option -wg automatic-rename off
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+set-option -g focus-events on
