--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,28 +1,35 @@
 unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source ~/.config/tmux/tmux.conf; display 'Reloaded tmux config'
 
+# set left and right status bar
+set -g allow-rename on
+set -g status-position bottom
+set -g status-interval 1
+set -g status-left-length 100
+set -g status-right-length 100
 
-# Enforce Prefix key
-set-option -g prefix C-b
-bind-key C-b send-prefix
+set -g status-left ''
+set -g status-right ''
 
-# Mouse Options
-set -g mouse on
-unbind -n MouseDrag1Pane
+set-option -g status-justify centre
 
-# Vi mode
-set-window-option -g mode-keys vi
-
-# Start counting pane and window number at 1
+# start index at 1
 set -g base-index 1
-setw -g pane-base-index 1
+set -g pane-base-index 1
 
-# Disable automatic renaming
-set-option -wg automatic-rename off
+# renumber when window is closed
+set -g renumber-window on
 
-# Set new panes to open in current directory
-bind c new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+# enable 256-colors
+set -g default-terminal 'screen-256color'
+set -ag terminal-overrides ',xterm-256color*:RGB'
 
-set-option -g focus-events on
+set -g status-left-length 85
+set -g status-left "Session #S"
+set -g window-status-current-format "|#I:#W|"
+set -g status-style bg=default
+set -g status-right '#(ipconfig getifaddr en0) #h' 
+set -g status-justify centre
+
+bind s set-option -g status
+bind C-s set-option -g status
