--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
 unbind r
-bind r source ~/.config/tmux/tmux.conf; display 'Reloaded tmux config'
+bind r source ~/.config/tmux/tmux.conf \; display-message 'Reloaded tmux config'
 
 # set left and right status bar
 set -g allow-rename on
@@ -33,3 +33,7 @@ set -g status-justify centre
 
 bind s set-option -g status
 bind C-s set-option -g status
+
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
