--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ include theme.kitty.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Menlo
+font_family      JetBrainsMonoNL Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -783,7 +783,7 @@ enable_audio_bell no
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
 
-visual_bell_duration 0.5
+visual_bell_duration 0
 
 #: The visual bell duration (in seconds). Flash the screen when a bell
 #: occurs for the specified number of seconds. Set to zero to disable.
@@ -803,7 +803,7 @@ visual_bell_duration 0.5
 #: selection background color. If you feel that the visual bell is too
 #: bright, you can set it to a darker color.
 
-window_alert_on_bell yes
+window_alert_on_bell no
 
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on Linux.
