--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,8 @@
 unbind r
 bind r source ~/.config/tmux/tmux.conf \; display-message 'Reloaded tmux config'
 
+set-option -g default-shell $SHELL
+
 # set left and right status bar
 set -g allow-rename on
 set -g status-position bottom
@@ -33,6 +35,9 @@ set -g status-justify centre
 
 bind s set-option -g status
 bind C-s set-option -g status
+
+set-option -sg escape-time 10
+set-option -g focus-events on
 
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
