--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,19 +1,11 @@
 unbind r
 bind r source ~/.config/tmux/tmux.conf \; display-message 'Reloaded tmux config'
-
-set-option -g default-shell $SHELL
+bind C-r source ~/.config/tmux/tmux.conf \; display-message 'Reloaded tmux config'
 
 # set left and right status bar
 set -g allow-rename on
-set -g status-position bottom
-set -g status-interval 1
-set -g status-left-length 100
-set -g status-right-length 100
-
-set -g status-left ''
-set -g status-right ''
-
-set-option -g status-justify centre
+set-window-option -g automatic-rename on
+set-option -g set-titles on
 
 # start index at 1
 set -g base-index 1
@@ -22,23 +14,40 @@ set -g pane-base-index 1
 # renumber when window is closed
 set -g renumber-window on
 
+set -sg escape-time 10
+set -g focus-events on
+
 # enable 256-colors
 set -g default-terminal 'screen-256color'
 set -ag terminal-overrides ',xterm-256color*:RGB'
 
-set -g status-left-length 85
+set -g status-keys vi
+setw -g mode-keys vi
+
 set -g status-left "Session #S"
-set -g window-status-current-format "|#I:#W|"
-set -g status-style bg=default
+set -g status-left-length 85
 set -g status-right '#(ipconfig getifaddr en0) #h' 
+set -g status-right-length 85
+set -g status-interval 1
+set -g status-style bg=default
 set -g status-justify centre
+set -g status-position bottom
+set -g window-status-current-format "|#I:#W|"
 
 bind s set-option -g status
 bind C-s set-option -g status
 
-set-option -sg escape-time 10
-set-option -g focus-events on
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch windows
+bind -n S-M-Left  previous-window
+bind -n S-M-Right next-window
 
 bind c new-window -c "#{pane_current_path}"
+bind C-c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
