--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,12 +24,12 @@ set -ag terminal-overrides ',xterm-256color*:RGB'
 set -g status-keys vi
 setw -g mode-keys vi
 
-set -g status-left "Session #S"
+set -g status-left "#S"
 set -g status-left-length 85
 set -g status-right '#(ipconfig getifaddr en0) #h' 
 set -g status-right-length 85
 set -g status-interval 1
-set -g status-style bg=default
+# set -g status-style bg=default
 set -g status-justify centre
 set -g status-position bottom
 set -g window-status-current-format "|#I:#W|"
