--- a/.config/git/config
+++ b/.config/git/config
@@ -1,12 +1,18 @@
 [user]
-	name = rafaalberto02
-	email = rafa.alberto02@gmail.com
+    name = rafaalberto02
+    email = rafa.alberto02@gmail.com
 
 [init]
-	defaultBranch = main
+    defaultBranch = main
 
 [push]
     autoSetupRemote = true
 
 [core]
-	editor = vim
+    editor = nvim
+
+[color]
+    ui = auto
+
+[commit]
+    verbose = true
