--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # include theme.kitty.conf
+include tokyonight.kitty.conf
 
 #: Fonts {{{
 
@@ -1224,11 +1225,11 @@ hide_window_decorations yes
 #: Color scheme {{{
 
 # foreground #dddddd
-background #000000
+# background #000000
 
 #: The foreground and background colors.
 
-background_opacity 0.9
+# background_opacity 0.9
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1253,7 +1254,7 @@ background_opacity 0.9
 #: will only work if dynamic_background_opacity was enabled in the
 #: original config.
 
-background_blur 1
+# background_blur 1
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
