--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,16 +24,6 @@ set-option -sa terminal-overrides ",xterm-kitty:RGB"
 set -g status-keys vi
 setw -g mode-keys vi
 
-set -g status-left "#S"
-set -g status-left-length 85
-set -g status-right '#(ipconfig getifaddr en0) #h' 
-set -g status-right-length 85
-set -g status-interval 1
-# set -g status-style bg=default
-set -g status-justify centre
-set -g status-position bottom
-set -g window-status-current-format "|#I:#W|"
-
 bind s set-option -g status
 bind C-s set-option -g status
 
@@ -51,3 +41,33 @@ bind c new-window -c "#{pane_current_path}"
 bind C-c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# TokyoNight colors for Tmux
+
+set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+
+set -g message-style "fg=#7aa2f7,bg=#3b4261"
+set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+
+set -g pane-border-style "fg=#3b4261"
+set -g pane-active-border-style "fg=#7aa2f7"
+
+set -g status "on"
+set -g status-justify "left"
+
+set -g status-style "fg=#7aa2f7,bg=#16161e"
+
+set -g status-left-length "100"
+set -g status-right-length "100"
+
+set -g status-left-style NONE
+set -g status-right-style NONE
+
+set -g status-left "#[fg=#15161e,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#16161e,nobold,nounderscore,noitalics]"
+set -g status-right '#[fg=#15161e,bg=#7aa2f7,bold] #(ipconfig getifaddr en0) ' 
+
+setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
+setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
