--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,8 +18,8 @@ set -sg escape-time 10
 set -g focus-events on
 
 # enable 256-colors
-set -g default-terminal 'screen-256color'
-set -ag terminal-overrides ',xterm-256color*:RGB'
+set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ",xterm-kitty:RGB"
 
 set -g status-keys vi
 setw -g mode-keys vi
