--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,20 +1,25 @@
 [window]
-dimensions = { columns = 120, lines = 30 }
-padding = { x = 20, y = 40 }
-decorations = "transparent"
-opacity = 0.1
-blur = true
+dimensions = { columns = 0, lines = 0 }
+padding = { x = 0, y = 5 }
+dynamic_padding = false
+decorations = "None"
+opacity = 0.9
+blur = false
 option_as_alt = "Both"
 
 [font]
+normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
 size = 18
-normal = { family = "JetBrainsMonoNL Nerd Font", style = "Regular" }
-bold = { family = "JetBrainsMonoNL Nerd Font", style = "Bold" }
-italic = { family = "JetBrainsMonoNL Nerd Font", style = "Italic" }
-bold_italic = { family = "JetBrainsMonoNL Nerd Font", style = "Bold Italic" }
+
+[colors.primary]
+background = "#000000"
+
 
 [keyboard]
 bindings = [
     { key = "Right", mods = "Alt", chars = "\u001BF" },
     { key = "Left",  mods = "Alt", chars = "\u001BB" },
 ]
+
+[env]
+TERM = "xterm-256color"
