--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,7 +2,7 @@ unbind r
 bind r source ~/.config/tmux/tmux.conf \; display-message 'Reloaded tmux config'
 bind C-r source ~/.config/tmux/tmux.conf \; display-message 'Reloaded tmux config'
 
-# set left and right status bar
+# auto rename windows
 set -g allow-rename on
 set-window-option -g automatic-rename on
 set-option -g set-titles on
@@ -21,26 +21,32 @@ set -g focus-events on
 set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ",xterm-kitty:RGB"
 
+# Toggle status bar
+bind s set-option -g status
+
+set -g set-clipboard on
+
+# vi mode
 set -g status-keys vi
 setw -g mode-keys vi
 
-bind s set-option -g status
-bind C-s set-option -g status
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
 
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -n S-M-h  previous-window
+bind -n S-M-l next-window
 
-# Shift arrow to switch windows
-bind -n S-M-Left  previous-window
-bind -n S-M-Right next-window
-
+# Open new windows on current path
 bind c new-window -c "#{pane_current_path}"
 bind C-c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# Enable undercurl
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # TokyoNight colors for Tmux
 
@@ -71,3 +77,20 @@ setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
 setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
+
+# search sessions
+bind C-s display-popup -E "\
+         tmux list-sessions -F '#{session_name}' |\
+         sed '/^$/d' |\
+         fzf --reverse --header jump-to-session |\
+         xargs tmux switch-client -t"
+
+# search windows in current session
+         bind C-w display-popup -E "\
+             tmux list-windows -F '#{window_index} #{window_name}' |\
+             sed '/^$/d' |\
+             fzf --reverse --header jump-to-window |\
+             cut -d ' ' -f 1 |\
+             xargs tmux select-window -t"
+
+set -g mouse on
