modified:   nix-darwin/modules/homebrew.nix 	modified:   nix-darwin/modules/shared/packages.nix 	modified:   skhd/skhdrc 	modified:   tmux/tmux.conf 	modified:   yabai/yabairc 	modified:   zsh/exports.zsh 	modified:   zsh/functions/functions.zsh 	new file:   zsh/functions/install_dotnet_completions.zsh 	modified:   zsh/scripts/tmux-auto-session

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -94,3 +94,5 @@ bind C-s display-popup -E "\
              xargs tmux select-window -t"
 
 set -g mouse on
+set -s set-clipboard on
+set -s set-clipboard external
