change nvim config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,8 +18,8 @@ set -sg escape-time 10
 set -g focus-events on
 
 # enable 256-colors
-set -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ",xterm-kitty:RGB"
+set -g default-terminal "tmux-256color"
+#set-option -sa terminal-overrides ",xterm-kitty:RGB"
 
 # Toggle status bar
 bind s set-option -g status
