--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1229,7 +1229,7 @@ hide_window_decorations yes
 
 #: The foreground and background colors.
 
-# background_opacity 0.9
+background_opacity 0.95
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1254,7 +1254,7 @@ hide_window_decorations yes
 #: will only work if dynamic_background_opacity was enabled in the
 #: original config.
 
-# background_blur 1
+background_blur 64
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
