--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -70,7 +70,8 @@ set -g status-left-style NONE
 set -g status-right-style NONE
 
 set -g status-left "#[fg=#15161e,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#16161e,nobold,nounderscore,noitalics]"
-set -g status-right '#[fg=#15161e,bg=#7aa2f7,bold] #(ipconfig getifaddr en0) ' 
+#set -g status-right '#[fg=#15161e,bg=#7aa2f7,bold] #(ipconfig getifaddr en0) ' 
+set -g status-right '' 
 
 setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
 setw -g window-status-separator ""
