--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,19 +1,15 @@
 [window]
 dimensions = { columns = 0, lines = 0 }
 padding = { x = 0, y = 5 }
-dynamic_padding = false
-decorations = "None"
-opacity = 0.9
+dynamic_padding = true
+decorations = "buttonless"
+opacity = 1
 blur = false
 option_as_alt = "Both"
 
 [font]
 normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
 size = 18
-
-[colors.primary]
-background = "#000000"
-
 
 [keyboard]
 bindings = [
@@ -23,3 +19,34 @@ bindings = [
 
 [env]
 TERM = "xterm-256color"
+
+[colors.primary]
+background = "#08080b"
+foreground = "#787c99"
+
+[colors.cursor]
+cursor = "#787c99"
+
+[colors.selection]
+text = "CellForeground"
+background = "#515c7e"
+
+[colors.normal]
+black = "#363b54"
+red = "#f7768e"
+green = "#41a6b5"
+yellow = "#e0af68"
+blue = "#7aa2f7"
+magenta = "#bb9af7"
+cyan = "#7dcfff"
+white = "#787c99"
+
+[colors.bright]
+black = "#363b54"
+red = "#f7768e"
+green = "#41a6b5"
+yellow = "#e0af68"
+blue = "#7aa2f7"
+magenta = "#bb9af7"
+cyan = "#7dcfff"
+white = "#787c99"
