--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,6 @@
 [window]
 dimensions = { columns = 0, lines = 0 }
-padding = { x = 0, y = 5 }
+padding = { x = 10, y = 10 }
 dynamic_padding = true
 decorations = "buttonless"
 opacity = 1
@@ -8,7 +8,7 @@ blur = false
 option_as_alt = "Both"
 
 [font]
-normal = { family = "monospace", style = "Regular" }
+normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
 size = 18
 
 [keyboard]
