--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -3,8 +3,8 @@ dimensions = { columns = 0, lines = 0 }
 padding = { x = 10, y = 10 }
 dynamic_padding = true
 decorations = "buttonless"
-opacity = 1
-blur = false
+opacity = 0.6
+blur = true
 option_as_alt = "Both"
 
 [font]
