--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,6 @@
 [window]
 dimensions = { columns = 0, lines = 0 }
-padding = { x = 10, y = 10 }
+padding = { x = 0, y = 0 }
 dynamic_padding = true
 decorations = "buttonless"
 opacity = 0.6
@@ -18,4 +18,4 @@ bindings = [
 ]
 
 [env]
-TERM = "xterm-256color"
+TERM = "screen-256color"
