--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,9 +1,15 @@
+run ~/.config/tmux/plugin/tmux-gruvbox/gruvbox-tpm.tmux
+
+set -g @tmux-gruvbox 'dark256'
+
 unbind r
+unbind C-r
 bind r source ~/.config/tmux/tmux.conf \; display-message 'Reloaded tmux config'
 bind C-r source ~/.config/tmux/tmux.conf \; display-message 'Reloaded tmux config'
 
 # auto rename windows
 set -g allow-rename on
+set -g renumber-window on
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
@@ -11,20 +17,17 @@ set-option -g set-titles on
 set -g base-index 1
 set -g pane-base-index 1
 
-# renumber when window is closed
-set -g renumber-window on
-
-set -sg escape-time 10
-set -g focus-events on
-
 # enable 256-colors
-set -g default-terminal "tmux-256color"
-#set-option -sa terminal-overrides ",xterm-kitty:RGB"
+set -g default-terminal "screen-256color"
 
 # Toggle status bar
 bind s set-option -g status
 
-set -g set-clipboard on
+set -g mouse on
+set -s set-clipboard on
+set -s set-clipboard external
+
+set -s escape-time 0
 
 # vi mode
 set -g status-keys vi
@@ -35,49 +38,11 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
-bind -n S-M-h  previous-window
-bind -n S-M-l next-window
-
 # Open new windows on current path
 bind c new-window -c "#{pane_current_path}"
 bind C-c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-
-# Enable undercurl
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-
-# TokyoNight colors for Tmux
-
-set -g mode-style "fg=#7aa2f7,bg=#3b4261"
-
-set -g message-style "fg=#7aa2f7,bg=#3b4261"
-set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
-
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
-
-set -g status "on"
-set -g status-justify "left"
-
-set -g status-style "fg=#7aa2f7,bg=#16161e"
-
-set -g status-left-length "100"
-set -g status-right-length "100"
-
-set -g status-left-style NONE
-set -g status-right-style NONE
-
-set -g status-left "#[fg=#15161e,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#16161e,nobold,nounderscore,noitalics]"
-#set -g status-right '#[fg=#15161e,bg=#7aa2f7,bold] #(ipconfig getifaddr en0) ' 
-set -g status-right '' 
-
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
-setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
 
 # search sessions
 bind C-s display-popup -E "\
@@ -85,15 +50,3 @@ bind C-s display-popup -E "\
          sed '/^$/d' |\
          fzf --reverse --header jump-to-session |\
          xargs tmux switch-client -t"
-
-# search windows in current session
- bind C-w display-popup -E "\
-     tmux list-windows -F '#{window_index} #{window_name}' |\
-     sed '/^$/d' |\
-     fzf --reverse --header jump-to-window |\
-     cut -d ' ' -f 1 |\
-     xargs tmux select-window -t"
-
-set -g mouse on
-set -s set-clipboard on
-set -s set-clipboard external
